--- a/WebApplication4/Site.Master
+++ b/WebApplication4/Site.Master
@@ -12,6 +12,8 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
     <asp:ContentPlaceHolder runat="server" ID="HeadContent" />
+    <link href="Content/bootstrap.css" rel="stylesheet" />
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <form runat="server">
@@ -40,7 +42,7 @@
         <div class="content-wrapper">
             <div class="float-left">
                 <p class="site-title">
-                    <a runat="server" href="~/">your logo here</a>
+                    <a runat="server" href="~/">Energy via Audit</a>
                 </p>
             </div>
             <div class="float-right">
@@ -80,10 +82,13 @@
     <footer>
         <div class="content-wrapper">
             <div class="float-left">
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - EVA Application</p>
             </div>
         </div>
     </footer>
     </form>
 </body>
+<script src="Scripts/bootstrap.js"></script>
+<script src="Scripts/bootstrap.min.js"></script>
+<script src="Scripts/jquery-1.9.1.min.js"></script>
 </html>
